[Feat] 웹 디자인 default 페이지 추가

--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    body
+    <div class="element" data-model-id="172:2">
+      <div class="overlap-group-wrapper">
+        <div class="overlap-group">
+          <div class="overlap">
+            <div class="div">
+              <div class="overlap-2">
+                <img class="background-image" src="https://c.animaapp.com/AUxvzaXH/img/background-image.svg" />
+                <div class="sub-title">ddddddddd</div>
+                <div class="title">당신에게 어울리는</div>
+                <img class="start-icon-small" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-small.svg" />
+                <img class="start-icon-large" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-large.svg" />
+                <img class="image" src="https://c.animaapp.com/AUxvzaXH/img/------.png" />
+                <p class="hash"><span class="text-wrapper">#</span> <span class="span"> 관능적</span></p>
+              </div>
+              <img class="img" src="https://c.animaapp.com/AUxvzaXH/img/share.svg" />
+            </div>
+            <p class="p"><span class="text-wrapper">#</span> <span class="span"> 시원함</span></p>
+          </div>
+          <div class="top-note-group">
+            <div class="top-note-title">Top</div>
+            <div class="top-note-text">Lemon</div>
+          </div>
+          <div class="middle-note-group">
+            <div class="middle-note-title">Middle</div>
+            <div class="text-wrapper-2">Middle</div>
+          </div>
+          <div class="base-note-group">
+            <div class="base-note-title">Base</div>
+            <div class="text-wrapper-2">Base</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
