[Feat] 모바일 환경에 맞게 추가
 - color 값 이미지 대체
 - flexible 컴포넌트 사용

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,7 +12,7 @@
           <div class="overlap">
             <div class="div">
               <div class="overlap-2">
-                <img class="background-image" src="https://c.animaapp.com/AUxvzaXH/img/background-image.svg" />
+                <div class="background-image"></div>
                 <div class="sub-title">ddddddddd</div>
                 <div class="title">당신에게 어울리는</div>
                 <img class="start-icon-small" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-small.svg" />
