[Feat] flexible ui 구현

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="div">
               <div class="overlap-2">
                 <div class="background-image"></div>
-                <div class="sub-title">ddddddddd</div>
+                <div class="sub-title">sub-title-default</div>
                 <div class="title">당신에게 어울리는</div>
                 <img class="start-icon-small" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-small.svg" />
                 <img class="start-icon-large" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-large.svg" />
@@ -86,7 +86,7 @@
             overlap: "#d6b3f7"
           }
         },
-                { // 인덱스 4
+        { // 인덱스 4
           subTitle: "Lumina",
           title: "당신에게 어울리는",
           hash: "신비적",
@@ -100,7 +100,7 @@
             overlap: "#b97a2b"
           }
         },
-                { // 인덱스 5
+        { // 인덱스 5
           subTitle: "Cool Water",
           title: "당신에게 어울리는",
           hash: "시원함",
@@ -114,7 +114,7 @@
             overlap: "#4a7dc7"
           }
         },
-                { // 인덱스 6
+        { // 인덱스 6
           subTitle: "Maruit",
           title: "당신에게 어울리는",
           hash: "도시적",
@@ -127,8 +127,8 @@
             overlapGroup: "#23446d",
             overlap: "#6bb0d6"
           }
-        },
-                { // 인덱스 7
+        },  
+        { // 인덱스 7
           subTitle: "Nectarua",
           title: "당신에게 어울리는",
           hash: "관능적",
