--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img class="start-icon-small" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-small.svg" />
           <img class="start-icon-large" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-large.svg" />
           <img class="image" src="https://c.animaapp.com/AUxvzaXH/img/------.png" />
-          <img class="img" src="https://c.animaapp.com/AUxvzaXH/img/share.svg" />
+          <img class="img" src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/icons/download.svg" />
         </div>
         <p class="hash"><span class="text-wrapper">#</span> <span class="span"> 관능적</span></p>
         <p class="p"><span class="text-wrapper">#</span> <span class="span"> 시원함</span></p>
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script>
       // 인덱스별 데이터
       const data = [
@@ -171,6 +172,18 @@
       document.querySelector('.image').src = item.image;
       document.querySelector('.overlap-group').style.backgroundColor = item.colors.overlapGroup;
       document.querySelector('.overlap').style.backgroundColor = item.colors.overlap;
+
+      // .img 클릭 시 화면 전체(body)를 이미지로 저장
+      document.querySelector('.img').addEventListener('click', function() {
+        html2canvas(document.body).then(function(canvas) {
+          const link = document.createElement('a');
+          link.href = canvas.toDataURL('image/png');
+          link.download = 'perfume_result.png';
+          document.body.appendChild(link);
+          link.click();
+          document.body.removeChild(link);
+        });
+      });
     </script>
   </body>
 </html>
