[Feat] 다운로드 아이콘 사이즈 수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
           <img class="start-icon-small" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-small.svg" />
           <img class="start-icon-large" src="https://c.animaapp.com/AUxvzaXH/img/start-icon-large.svg" />
           <img class="image" src="https://c.animaapp.com/AUxvzaXH/img/------.png" />
-          <img class="img" src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/icons/download.svg" />
+          <svg class="img" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 16 16">
+            <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5A1.5 1.5 0 0 0 2.5 14.5h11a1.5 1.5 0 0 0 1.5-1.5v-2.5a.5.5 0 0 1 1 0v2.5A2.5 2.5 0 0 1 13.5 15.5h-11A2.5 2.5 0 0 1 0 12.9v-2.5a.5.5 0 0 1 .5-.5z"/>
+            <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+          </svg>
         </div>
         <p class="hash"><span class="text-wrapper">#</span> <span class="span"> 관능적</span></p>
         <p class="p"><span class="text-wrapper">#</span> <span class="span"> 시원함</span></p>
